tests/ui/closures/2229_closure_analysis/diagnostics/borrowck/borrowck-2.stderr
error[E0502]: cannot borrow `p` as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-2.rs:12:17
   |
LL |     let y = &p.y;
   |             ---- immutable borrow occurs here
LL |     let mut c = || {
   |                 ^^ mutable borrow occurs here
LL |
LL |        println!("{:?}", p);
   |                         - second borrow occurs due to use of `p` in closure
LL |        let x = &mut p.x;
   |                     --- capture is mutable because of use here
...
LL |     println!("{}", y);
   |                    - immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
